force-app/main/default/objects/Categorizacao__c.object
<CustomObject>
    <fields>
        <fullName>PorCategorizacao__c</fullName>
        <description>Indica se a distribuicao sera feita diretamente pela categorizacao.</description>
        <label>Por Categorizacao</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SimNao</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>AtendimentoCentroLogistico</fullName>
        <active>true</active>
        <description>Record Type Centro Logístico - Categorizacao__c</description>
        <label>Atendimento Centro Logístico</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoRebocadores</fullName>
        <active>true</active>
        <description>Record Type Rebocadores - Categorizacao__c</description>
        <label>Atendimento Rebocadores</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoTeconRioGrande</fullName>
        <active>true</active>
        <description>Record Type Rio Grande - Categorizacao__c</description>
        <label>Atendimento Tecon Rio Grande</label>
    </recordTypes>
    <recordTypes>
        <fullName>AtendimentoTeconSalvador</fullName>
        <active>true</active>
        <description>Record Type Salvador - Categorizacao__c</description>
        <label>Atendimento Tecon Salvador</label>
    </recordTypes>
</CustomObject>