force-app/main/default/objects/Categorizacao__c/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <description>Copiado da arvore de categorizacao.</description>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Assunto</valueSetName>
    </valueSet>
</CustomField>