force-app/main/default/objects/Categorizacao__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controla se o registro esta habilitado para uso operacional.</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>