force-app/main/default/objects/Categorizacao__c/fields/CampoDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CampoDistribuicao__c</fullName>
    <description>API Name do campo picklist do Caso.</description>
    <label>Campo de Distribuicao</label>
    <length>80</length>
    <type>Text</type>
</CustomField>