force-app/main/default/objects/Categorizacao__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <description>Copiado da arvore de categorizacao.</description>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Categoria</valueSetName>
    </valueSet>
</CustomField>