force-app/main/default/objects/Categorizacao__c/fields/ChaveNatural__c.field-meta.xml
<CustomField>
    <fullName>ChaveNatural__c</fullName>
    <description>Chave natural de unicidade da combina o funcional de categoriza o.</description>
    <label>Chave Natural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>