force-app/main/default/objects/Categorizacao__c/fields/ChaveNaturalHash__c.field-meta.xml
<CustomField>
    <fullName>ChaveNaturalHash__c</fullName>
    <description>Hash tecnico da chave natural para garantir unicidade em carga e manutencao.</description>
    <label>Hash da Chave Natural</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>