force-app/main/default/objects/Categorizacao__c/fields/DistribuirParaFila__c.field-meta.xml
<CustomField>
    <fullName>DistribuirParaFila__c</fullName>
    <description>Indica se a regra de categorizacao distribui para fila.</description>
    <label>Distribuir para Fila</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>