force-app/main/default/objects/Categorizacao__c/fields/EtapaAtendimentoDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>EtapaAtendimentoDistribuicao__c</fullName>
    <description>Etapa do Atendimento (Case.EtapaAtendimento__c) aplicada ao Case quando distribuido para fila por esta Categorizacao. Obrigatorio quando DistribuirParaFila__c=&apos;Sim&apos;.</description>
    <label>Etapa do Atendimento na Distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Em Triagem</fullName>
                <default>true</default>
                <label>Em Triagem</label>
            </value>
            <value>
                <fullName>Em Atendimento</fullName>
            </value>
            <value>
                <fullName>Aguardando Cliente</fullName>
            </value>
            <value>
                <fullName>Aguardando Área Interna</fullName>
            </value>
            <value>
                <fullName>Em Acompanhamento</fullName>
            </value>
            <value>
                <fullName>Preparando Retorno ao Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>