force-app/main/default/objects/Categorizacao__c/fields/FilaDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>FilaDeveloperName__c</fullName>
    <description>Campo tecnico para armazenar DeveloperName da fila de Caso.</description>
    <label>Fila DeveloperName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>