force-app/main/default/objects/Categorizacao__c/fields/FilaDeveloperNameFallback__c.field-meta.xml
<CustomField>
    <fullName>FilaDeveloperNameFallback__c</fullName>
    <description>Campo tecnico para armazenar DeveloperName da fila usada quando a distribuicao por campo customizado nao bate com o valor configurado.</description>
    <label>Fila DeveloperName Fallback</label>
    <length>80</length>
    <type>Text</type>
</CustomField>