force-app/main/default/objects/Categorizacao__c/fields/FilaId__c.field-meta.xml
<CustomField>
    <fullName>FilaId__c</fullName>
    <description>Campo tecnico para armazenar cache do Group.Id da fila.</description>
    <label>Fila Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>