force-app/main/default/objects/Categorizacao__c/fields/FilaIdFallback__c.field-meta.xml
<CustomField>
    <fullName>FilaIdFallback__c</fullName>
    <description>Campo tecnico para armazenar cache do Group.Id da fila de fallback (usada quando o campo customizado nao bate com o valor configurado).</description>
    <label>Fila Id Fallback</label>
    <length>18</length>
    <type>Text</type>
</CustomField>