force-app/main/default/objects/Categorizacao__c/fields/GestaoSLA__c.field-meta.xml
<CustomField>
    <fullName>GestaoSLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona a categorização ao contexto de Gestão de SLA responsável por seus marcos, regras e configurações de atendimento.</description>
    <inlineHelpText>Gestão de SLA à qual esta categorização pertence.</inlineHelpText>
    <label>Gestão de SLA</label>
    <referenceTo>GestaoSLA__c</referenceTo>
    <relationshipLabel>Categorizações</relationshipLabel>
    <relationshipName>Categorizacoes</relationshipName>
    <type>Lookup</type>
</CustomField>