force-app/main/default/objects/Categorizacao__c/fields/LabelCampoDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>LabelCampoDistribuicao__c</fullName>
    <description>Label funcional do campo de distribuicao selecionado.</description>
    <label>Label do Campo de Distribuicao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>