force-app/main/default/objects/Categorizacao__c/fields/LabelValorDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>LabelValorDistribuicao__c</fullName>
    <description>Label funcional do valor selecionado.</description>
    <label>Label do Valor de Distribuicao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>