force-app/main/default/objects/Categorizacao__c/fields/MotivoInativacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoInativacao__c</fullName>
    <description>Motivo da inativacao. Obrigatorio quando Status = Inativo.</description>
    <label>Motivo de Inativacao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>