force-app/main/default/objects/Categorizacao__c/fields/NomeFilaDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>NomeFilaDistribuicao__c</fullName>
    <label>Nome Fila Distribuicao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>