force-app/main/default/objects/Categorizacao__c/fields/NomeFilaFallbackDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>NomeFilaFallbackDistribuicao__c</fullName>
    <label>Nome Fila Fallback Distribuicao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>