force-app/main/default/objects/Categorizacao__c/fields/PermiteAssumirComFilaParametrizada__c.field-meta.xml
<CustomField>
    <fullName>PermiteAssumirComFilaParametrizada__c</fullName>
    <description>Quando &quot;Nao&quot;, o atendente nao pode escolher Assumir/Encerrar na criacao do Case se essa Categorizacao tiver uma fila parametrizada resolvida (fixa, por campo customizado ou fallback) - o destino fica travado em Distribuir. Default &quot;Sim&quot; aplicado em CategorizacaoService quando em branco, para nao travar retroativamente quem ja estava configurado.</description>
    <label>Permite Assumir Com Fila Parametrizada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <default>true</default>
                <label>Sim</label>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>