force-app/main/default/objects/Categorizacao__c/fields/PorCampoCustomizado__c.field-meta.xml
<CustomField>
    <fullName>PorCampoCustomizado__c</fullName>
    <description>Indica se, além da distribuição direta pela categorização, existe um critério extra de campo/valor do Case que precisa ser validado para a distribuição.</description>
    <label>Por Campo Personalizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>