force-app/main/default/objects/Categorizacao__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <description>Priorização sugerida para criação ou recategorização de Case.</description>
    <label>Priorização Sugerida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Prioridade</valueSetName>
    </valueSet>
</CustomField>