force-app/main/default/objects/Categorizacao__c/fields/Subassunto__c.field-meta.xml
<CustomField>
    <fullName>Subassunto__c</fullName>
    <description>Copiado da arvore de categorizacao.</description>
    <label>Subassunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Subassunto</valueSetName>
    </valueSet>
</CustomField>