force-app/main/default/objects/Categorizacao__c/fields/UnidadeNegocios__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocios__c</fullName>
    <label>Unidade de Negócios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadeNegocio</valueSetName>
    </valueSet>
</CustomField>