force-app/main/default/objects/Categorizacao__c/fields/ValorDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>ValorDistribuicao__c</fullName>
    <description>API Value do valor da picklist selecionada.</description>
    <label>Valor de Distribuicao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>