force-app/main/default/objects/Categorizacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>UnidadeNegocios__c</columns>
    <columns>TipoCaso__c</columns>
    <columns>Categoria__c</columns>
    <columns>Assunto__c</columns>
    <columns>Subassunto__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>